changed integration test dockerization to not reference alpine linux

--- a/native-schema-registry/c/src/CMakeLists.txt
+++ b/native-schema-registry/c/src/CMakeLists.txt
@@ -30,14 +30,19 @@ set_target_properties(${DATA_TYPES_MODULE_NAME} PROPERTIES
 add_custom_command(
         TARGET ${DATA_TYPES_MODULE_NAME}
         POST_BUILD
+        COMMENT "copying data types for maven project build"
         COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:${DATA_TYPES_MODULE_NAME}> ${LIB_NATIVE_SCHEMA_REGISTRY_PATH}/
         COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_LINKER_FILE:${DATA_TYPES_MODULE_NAME}> ${LIB_NATIVE_SCHEMA_REGISTRY_PATH}/
+        COMMENT "building maven project, native image target"
         COMMAND mvn clean install -P native-image WORKING_DIRECTORY ${MAVEN_PROJECT_DIR}/..
 )
 
 #Add reference to the GraalVM generated Native schema registry module.
 #First, fix the include path in GraalVM generated header file.
-execute_process(COMMAND sed -ie "s/<graal_isolate.h>/\"graal_isolate.h\"/" ${LIB_NATIVE_SCHEMA_REGISTRY_PATH}/libnativeschemaregistry.h)
+execute_process(
+        COMMAND sed -ie "s/<graal_isolate.h>/\"graal_isolate.h\"/" ${LIB_NATIVE_SCHEMA_REGISTRY_PATH}/libnativeschemaregistry.h
+        COMMENT "fixed include path in GraalVM generated header file"
+)
 add_library(
         ${NATIVE_SCHEMA_REGISTRY_MODULE_NAME} SHARED
         IMPORTED
@@ -76,8 +81,7 @@ target_link_libraries(
 )
 
 ##Swig compilation
-set(CMAKE_SWIG_FLAGS)
-find_package(SWIG REQUIRED)
+find_package(SWIG 4.1.0 REQUIRED)
 include(UseSWIG)
 
 file(
