--- a/native-schema-registry/golang/integration-tests/Dockerfile.dockerized-tests
+++ b/native-schema-registry/golang/integration-tests/Dockerfile.dockerized-tests
@@ -1,4 +1,4 @@
-FROM golang:tip-bullseye
+FROM golang:1.20.14-bookworm
 
 
 # Set Go environment
@@ -24,13 +24,9 @@ WORKDIR /app/golang/integration-tests
 RUN go mod download
 
 # Copy and make helper script executable
-RUN chmod +x ./scripts/run-tests-alpine.sh
-RUN cp ./scripts/run-tests-alpine.sh /usr/local/bin/run-tests-alpine.sh
+RUN chmod +x ./scripts/run-tests-dockerized.sh
+RUN cp ./scripts/run-tests-dockerized.sh /usr/local/bin/run-tests-dockerized.sh
 # Install necessary dependencies for AWS CLI (e.g., unzip)
-RUN apt-get update && apt-get install -y unzip && rm -rf /var/lib/apt/lists/*
 
-RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-RUN unzip awscliv2.zip
-RUN ./aws/install
 # Default command
-CMD ["run-tests-alpine.sh"]
+CMD ["run-tests-dockerized.sh"]
