Modify deserializer and serializer to accept configuration file paths and add java utility for loading configurations

--- a/native-schema-registry/c/src/CMakeLists.txt
+++ b/native-schema-registry/c/src/CMakeLists.txt
@@ -5,9 +5,14 @@ if (CMAKE_SYSTEM_NAME MATCHES "^(Linux)$")
         list(APPEND TEST_COVERAGE "-ftest-coverage -fprofile-arcs")
         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${TEST_COVERAGE} -g -O0 -Wall")
         set(CMAKE_C_CLANG_TIDY clang-tidy -checks=-*,readability-*)
+        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -lgcov")
 endif()
 
 add_library(${AWS_COMMON_MEMALLOC} SHARED memory_allocator.c)
+set_target_properties(${AWS_COMMON_MEMALLOC} PROPERTIES
+    BUILD_RPATH "$ORIGIN"
+    INSTALL_RPATH "$ORIGIN"
+)
 target_link_libraries(${AWS_COMMON_MEMALLOC} PRIVATE ${AWS_C_COMMON})
 
 #Adding modules in the build order.
@@ -17,6 +22,10 @@ add_library(
         read_only_byte_array.c
         mutable_byte_array.c
         glue_schema_registry_error.c
+)
+set_target_properties(${DATA_TYPES_MODULE_NAME} PROPERTIES
+    BUILD_RPATH "$ORIGIN"
+    INSTALL_RPATH "$ORIGIN"
 )
 add_custom_command(
         TARGET ${DATA_TYPES_MODULE_NAME}
@@ -38,12 +47,19 @@ set_target_properties(
         IMPORTED_LOCATION "${LIB_NATIVE_SCHEMA_REGISTRY_PATH}/${LIB_NATIVE_SCHEMA_REGISTRY_LIBRARY_NAME}"
         IMPORTED_IMPLIB "${LIB_NATIVE_SCHEMA_REGISTRY_PATH}/${LIB_NATIVE_SCHEMA_REGISTRY_LIBRARY_OBJ_NAME}"
         INTERFACE_INCLUDE_DIRECTORIES "${LIB_NATIVE_SCHEMA_REGISTRY_PATH}"
+        IMPORTED_NO_SONAME TRUE
+        BUILD_RPATH "$ORIGIN"
+        INSTALL_RPATH "$ORIGIN"
 )
 
 add_library(
         ${SERDE_MODULE_NAME} SHARED
         glue_schema_registry_serializer.c
         glue_schema_registry_deserializer.c
+)
+set_target_properties(${SERDE_MODULE_NAME} PROPERTIES
+    BUILD_RPATH "$ORIGIN"
+    INSTALL_RPATH "$ORIGIN"
 )
 
 target_link_libraries(
@@ -88,7 +104,10 @@ set_target_properties(
         PROPERTIES
         INCLUDE_DIRECTORIES "${PROJECT_SOURCE_DIR}/include/"
         SWIG_USE_TARGET_INCLUDE_DIRECTORIES TRUE
+        BUILD_RPATH "$ORIGIN"
+        INSTALL_RPATH "$ORIGIN"
 )
+
 swig_link_libraries(
         ${CSHARP_MODULE_NAME}
         PUBLIC
@@ -109,38 +128,7 @@ add_custom_command(
         COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:${SERDE_MODULE_NAME}> ${CSHARP_GEN_LIB_PATH}/
 )
 
-####Python
-find_package(PythonLibs REQUIRED)
-set(PYTHON_MODULE_NAME GsrSerDePyGen)
-set(PYTHON_ROOT_PATH ${PROJECT_SOURCE_DIR}/../python/PyGsrSerDe)
-set(PYTHON_SOURCE_PATH ${PYTHON_ROOT_PATH}/)
-set(PYTHON_GEN_LIB_PATH ${PYTHON_ROOT_PATH})
-swig_add_library(
-        ${PYTHON_MODULE_NAME}
-        TYPE SHARED
-        LANGUAGE python
-        OUTPUT_DIR "${PYTHON_SOURCE_PATH}"
-        SOURCES ${GsrSerDeSrc}
-)
-list(APPEND PYTHON_INCLUDES
-        "${PROJECT_SOURCE_DIR}/include/"
-        #TODO: Path needs to be configurable per version and OS
-        "/usr/include/python3.7m/")
-
-target_include_directories(${PYTHON_MODULE_NAME} PUBLIC ${PYTHON_INCLUDES})
-set_target_properties(
-        ${PYTHON_MODULE_NAME}
-        PROPERTIES
-        SWIG_USE_TARGET_INCLUDE_DIRECTORIES TRUE
-)
-
-##TODO: Fix this during release. We should segregate Debug and Release
-##Copying built libraries to PYTHON project
-add_custom_command(
-        TARGET ${PYTHON_MODULE_NAME}
-        POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:${DATA_TYPES_MODULE_NAME}> ${PYTHON_GEN_LIB_PATH}/
-        COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:${NATIVE_SCHEMA_REGISTRY_MODULE_NAME}> ${PYTHON_GEN_LIB_PATH}/
-        COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:${AWS_COMMON_MEMALLOC}> ${PYTHON_GEN_LIB_PATH}/
-        COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:${SERDE_MODULE_NAME}> ${PYTHON_GEN_LIB_PATH}/
-)
+if(CMAKE_C_COMPILER_ID MATCHES "GNU")
+    add_compile_options(--coverage)
+    link_libraries(gcov)
+endif()
