--- a/native-schema-registry/src/main/resources/simplelogger.properties
+++ b/native-schema-registry/src/main/resources/simplelogger.properties
@@ -7,7 +7,7 @@
 org.slf4j.simpleLogger.defaultLogLevel=info
 
 # Log SDK requests
-org.slf4j.simpleLogger.log.software.amazon.awssdk.request=debug
+org.slf4j.simpleLogger.log.software.amazon.awssdk.request=info
 org.slf4j.simpleLogger.showDateTime=true
 org.slf4j.simpleLogger.dateTimeFormat=yyyy-MM-dd HH:mm:ss:SSS Z
 
