--- a/native-schema-registry/pom.xml
+++ b/native-schema-registry/pom.xml
@@ -151,6 +151,7 @@
                                     -H:CLibraryPath=${project.basedir}/c/build/src
                                     -H:ResourceConfigurationFiles=${project.basedir}/src/main/resources/resource-config.json
                                     -H:Name=libnativeschemaregistry.so
+                                    --enable-url-protocols=http
                                 </buildArgs>
                             </buildArgs>
                         </configuration>
