--- a/native-schema-registry/ProtobufGSRKafkaDemo/Producer/Producer.csproj
+++ b/native-schema-registry/ProtobufGSRKafkaDemo/Producer/Producer.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="../Shared/Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AWSGsrSerDe" Version="1.1.10" />
+  </ItemGroup>
+
 </Project>
