--- a/native-schema-registry/csharp/AWSGsrSerDe/AWSGsrSerDe/AWSGsrSerDe.csproj
+++ b/native-schema-registry/csharp/AWSGsrSerDe/AWSGsrSerDe/AWSGsrSerDe.csproj
@@ -3,6 +3,15 @@
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
         <CodeAnalysisRuleSet>GlueSchemaRegistry.ruleset</CodeAnalysisRuleSet>
+         <PackageId>AWSGsrSerDe</PackageId>
+         <!-- Matching with java layer version -->
+          <Version>1.1.10</Version>
+          <Company>Amazon</Company>
+          <Product>AWS Glue Schema Registry CSharp SerDe</Product>
+          <Description>AWS Glue Schema Registry serializers/deserializers for .NET (Avro/JSON/Protobuf).</Description>
+          <PackageProjectUrl>https://github.com/awslabs/aws-glue-schema-registry</PackageProjectUrl>
+          <RepositoryUrl>https://github.com/awslabs/aws-glue-schema-registry</RepositoryUrl>
+          <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
@@ -34,5 +43,10 @@
     </ItemGroup>
 
     <Import Project="..\Libs\Libs.projitems" Label="Shared" />
+    
+    <ItemGroup>
+      <None Include=".\bin\Release\net8.0\*.so" Pack="true" PackagePath="runtimes/linux-x64/native/" CopyToOutputDirectory="PreserveNewest" />
+    </ItemGroup>
+
 
 </Project>
