--- a/native-schema-registry/demos/csharp/Shared/Shared.csproj
+++ b/native-schema-registry/demos/csharp/Shared/Shared.csproj
@@ -5,6 +5,7 @@
     <RootNamespace>ProtobufGSRKafkaDemo</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AWSGsrSerDeVersion>1.1.10</AWSGsrSerDeVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSGsrSerDe" Version="1.1.10" />
+    <PackageReference Include="AWSGsrSerDe" Version="$(AWSGsrSerDeVersion)" />
   </ItemGroup>
 
   <ItemGroup>
