Refactor demo project - new path + use KafkaFlow in-the box interfaces + Use nupkg to distribute the csharp library instead of path to the DLL + Parent version downgrade in native pom
* Use nupkg to distribute the csharp library instead of path to the DLL
* Parent version downgrade in native pom to 1.1.10
* Move demo project to demos/csharp dir 
* Add library version as a property in demo csproj files

--- a/native-schema-registry/demos/csharp/Producer/Producer.csproj
+++ b/native-schema-registry/demos/csharp/Producer/Producer.csproj
@@ -3,9 +3,10 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>ProtobufGSRKafkaDemo.Consumer</RootNamespace>
+    <RootNamespace>ProtobufGSRKafkaDemo.Producer</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AWSGsrSerDeVersion>1.1.10</AWSGsrSerDeVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,6 +17,10 @@
 
   <ItemGroup>
     <ProjectReference Include="../Shared/Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AWSGsrSerDe" Version="$(AWSGsrSerDeVersion)" />
   </ItemGroup>
 
 </Project>
