--- a/native-schema-registry/demos/csharp/Shared/Shared.csproj
+++ b/native-schema-registry/demos/csharp/Shared/Shared.csproj
@@ -5,6 +5,7 @@
     <RootNamespace>ProtobufGSRKafkaDemo</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AWSGsrSerDeVersion>1.1.10</AWSGsrSerDeVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,9 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="AWSGsrSerDe">
-      <HintPath>../../csharp/AWSGsrSerDe/AWSGsrSerDe/bin/Release/net8.0/AWSGsrSerDe.dll</HintPath>
-    </Reference>
+    <PackageReference Include="AWSGsrSerDe" Version="$(AWSGsrSerDeVersion)" />
   </ItemGroup>
 
   <ItemGroup>
