--- a/native-schema-registry/c/src/CMakeLists.txt
+++ b/native-schema-registry/c/src/CMakeLists.txt
@@ -4,7 +4,7 @@ include(cmake/FetchAwsCommon.cmake)
 if (CMAKE_SYSTEM_NAME MATCHES "^(Linux)$")
         list(APPEND TEST_COVERAGE "-ftest-coverage -fprofile-arcs")
         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${TEST_COVERAGE} -g -O0 -Wall")
-        set(CMAKE_C_CLANG_TIDY clang-tidy -checks=-*,readability-*)
+        set(CMAKE_C_CLANG_TIDY clang-tidy -checks=-*,readability-*,-readability-math-missing-parentheses)
         set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -lgcov")
 endif()
 
@@ -30,13 +30,19 @@ set_target_properties(${DATA_TYPES_MODULE_NAME} PROPERTIES
 add_custom_command(
         TARGET ${DATA_TYPES_MODULE_NAME}
         POST_BUILD
+        COMMENT "copying data types for maven project build"
         COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:${DATA_TYPES_MODULE_NAME}> ${LIB_NATIVE_SCHEMA_REGISTRY_PATH}/
         COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_LINKER_FILE:${DATA_TYPES_MODULE_NAME}> ${LIB_NATIVE_SCHEMA_REGISTRY_PATH}/
+        COMMENT "building maven project, native image target"
+        COMMAND mvn clean install -P native-image WORKING_DIRECTORY ${MAVEN_PROJECT_DIR}/..
 )
 
 #Add reference to the GraalVM generated Native schema registry module.
 #First, fix the include path in GraalVM generated header file.
-execute_process(COMMAND sed -ie "s/<graal_isolate.h>/\"graal_isolate.h\"/" ${LIB_NATIVE_SCHEMA_REGISTRY_PATH}/libnativeschemaregistry.h)
+execute_process(
+        COMMAND sed -ie "s/<graal_isolate.h>/\"graal_isolate.h\"/" ${LIB_NATIVE_SCHEMA_REGISTRY_PATH}/libnativeschemaregistry.h
+        COMMENT "fixed include path in GraalVM generated header file"
+)
 add_library(
         ${NATIVE_SCHEMA_REGISTRY_MODULE_NAME} SHARED
         IMPORTED
@@ -51,6 +57,7 @@ set_target_properties(
         BUILD_RPATH "$ORIGIN"
         INSTALL_RPATH "$ORIGIN"
 )
+
 
 add_library(
         ${SERDE_MODULE_NAME} SHARED
@@ -67,6 +74,7 @@ target_link_libraries(
         ${AWS_COMMON_MEMALLOC}
 )
 
+
 target_link_libraries(
         ${SERDE_MODULE_NAME}
         ${AWS_COMMON_MEMALLOC}
@@ -75,8 +83,7 @@ target_link_libraries(
 )
 
 ##Swig compilation
-set(CMAKE_SWIG_FLAGS)
-find_package(SWIG REQUIRED)
+find_package(SWIG 4.1.0 REQUIRED)
 include(UseSWIG)
 
 file(
@@ -126,6 +133,47 @@ add_custom_command(
         COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:${NATIVE_SCHEMA_REGISTRY_MODULE_NAME}> ${CSHARP_GEN_LIB_PATH}/
         COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:${AWS_COMMON_MEMALLOC}> ${CSHARP_GEN_LIB_PATH}/
         COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:${SERDE_MODULE_NAME}> ${CSHARP_GEN_LIB_PATH}/
+)
+
+####Go 
+set(GO_MODULE_NAME GsrSerDeGoGen)
+set(GO_ROOT_PATH ${PROJECT_SOURCE_DIR}/../golang)
+set(GO_SOURCE_PATH ${GO_ROOT_PATH}/pkg/GsrSerDe)
+set(GO_LIB_PATH ${GO_ROOT_PATH}/lib)
+swig_add_library(
+        ${GO_MODULE_NAME}
+        TYPE SHARED
+        LANGUAGE go
+        OUTPUT_DIR "${GO_SOURCE_PATH}"
+        SOURCES ${GsrSerDeSrc}
+)
+set_target_properties(
+        ${GO_MODULE_NAME}
+        PROPERTIES
+        INCLUDE_DIRECTORIES "${PROJECT_SOURCE_DIR}/include/"
+        SWIG_USE_TARGET_INCLUDE_DIRECTORIES TRUE
+        BUILD_RPATH "$ORIGIN"
+        INSTALL_RPATH "$ORIGIN"
+)
+swig_link_libraries(
+        ${GO_MODULE_NAME}
+        PUBLIC
+        ${DATA_TYPES_MODULE_NAME}
+        ${SERDE_MODULE_NAME}
+        ${AWS_COMMON_MEMALLOC}
+        ${NATIVE_SCHEMA_REGISTRY_MODULE_NAME}
+)
+# Copy shared libraries to lib directory
+add_custom_command(
+        TARGET ${GO_MODULE_NAME}
+        POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E make_directory ${GO_LIB_PATH}
+        COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:${DATA_TYPES_MODULE_NAME}> ${GO_LIB_PATH}/
+        COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:${NATIVE_SCHEMA_REGISTRY_MODULE_NAME}> ${GO_LIB_PATH}/
+        COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:${AWS_COMMON_MEMALLOC}> ${GO_LIB_PATH}/
+        COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:${SERDE_MODULE_NAME}> ${GO_LIB_PATH}/
+        COMMAND ${CMAKE_COMMAND} -E make_directory ${GO_LIB_PATH}/include
+        COMMAND ${CMAKE_COMMAND} -E copy_directory ${PROJECT_SOURCE_DIR}/include/ ${GO_LIB_PATH}/include/
 )
 
 if(CMAKE_C_COMPILER_ID MATCHES "GNU")
