--- a/native-schema-registry/golang/integration-tests/Dockerfile.dockerized-tests
+++ b/native-schema-registry/golang/integration-tests/Dockerfile.dockerized-tests
@@ -1,7 +1,7 @@
 FROM golang:1.20-alpine
 
-RUN apk add --no-cache git
-RUN apk add --no-cache build-base
+RUN apk add  git
+RUN apk add  build-base
 
 # Set Go environment
 ENV GOPATH=/go
@@ -18,13 +18,8 @@ WORKDIR /app
 # Copy only the golang directory
 COPY golang/ ./golang/
 
-# Set up module dependencies - start with parent golang module
-WORKDIR /app/golang
-RUN go mod download
-
 # Now set up integration-tests module
 WORKDIR /app/golang/integration-tests
-RUN go mod download
 
 # Copy and make helper script executable
 RUN chmod +x ./scripts/run-tests-dockerized.sh
