Upgrade aws sdk v2 to latest and add direct sts module dependency in native module

--- a/native-schema-registry/pom.xml
+++ b/native-schema-registry/pom.xml
@@ -65,8 +65,17 @@
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>url-connection-client</artifactId>
         </dependency>
-        
 
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-sts</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>sts</artifactId>
+        </dependency>
+    
         <dependency>
             <!-- Optimize this dependency for reducing the shared library size -->
             <groupId>${parent.groupId}</groupId>
