--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,7 @@
         <module>integration-tests</module>
         <module>jsonschema-kafkaconnect-converter</module>
         <module>protobuf-kafkaconnect-converter</module>
+        <module>native-schema-registry</module>
     </modules>
 
     <properties>
@@ -82,7 +83,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <glue.schema.registry.groupId>software.amazon.glue</glue.schema.registry.groupId>
         <aws.sdk.v2.version>2.32.25</aws.sdk.v2.version>
-        <aws.sdk.v1.version>1.12.660</aws.sdk.v1.version>
+        <aws.sdk.v1.version>1.12.782</aws.sdk.v1.version>
         <kafka.scala.version>2.12</kafka.scala.version>
         <kafka.version>3.6.1</kafka.version>
         <avro.version>1.11.4</avro.version>
