Added negative integration tests for configuration sad paths.

--- a/native-schema-registry/golang/integration-tests/negative_test/configs/invalid_role_to_assume.properties
+++ b/native-schema-registry/golang/integration-tests/negative_test/configs/invalid_role_to_assume.properties
@@ -7,3 +7,4 @@ registry.name=default-registry
 description=Multi-threaded Protobuf GSR Kafka Demo with 5 message types
 compatibility=FORWARD
 schemaAutoRegistrationEnabled=true
+roleToAssume=arn:aws:iam::111111111111:role/Admin
