--- a/native-schema-registry/golang/integration-tests/negative_test/configs/non_existant_endpoint.properties
+++ b/native-schema-registry/golang/integration-tests/negative_test/configs/non_existant_endpoint.properties
@@ -1,5 +1,5 @@
 region=us-east-1
-endpoint=https://glue.us-east-1.amazonaws.com
+endpoint=https://glue.not-a-real-endpoint.us-east-1.amazonaws.com
 # proxyUrl=http://your-proxy:8080
 
 # Schema Registry Configuration
