--- a/native-schema-registry/golang/integration-tests/negative_test/configs/non_existant_registry.properties
+++ b/native-schema-registry/golang/integration-tests/negative_test/configs/non_existant_registry.properties
@@ -3,7 +3,7 @@ endpoint=https://glue.us-east-1.amazonaws.com
 # proxyUrl=http://your-proxy:8080
 
 # Schema Registry Configuration
-registry.name=default-registry
+registry.name=this-registry-does-not-exist
 description=Multi-threaded Protobuf GSR Kafka Demo with 5 message types
 compatibility=FORWARD
 schemaAutoRegistrationEnabled=true
