--- a/native-schema-registry/pom.xml
+++ b/native-schema-registry/pom.xml
@@ -69,13 +69,15 @@
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-sts</artifactId>
+             <version>${aws.sdk.v1.version}</version>
         </dependency>
 
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>sts</artifactId>
+             <version>${aws.sdk.v2.version}</version>
         </dependency>
-    
+
         <dependency>
             <!-- Optimize this dependency for reducing the shared library size -->
             <groupId>${parent.groupId}</groupId>
