--- a/native-schema-registry/pom.xml
+++ b/native-schema-registry/pom.xml
@@ -65,7 +65,18 @@
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>url-connection-client</artifactId>
         </dependency>
-        
+
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-sts</artifactId>
+             <version>${aws.sdk.v1.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>sts</artifactId>
+             <version>${aws.sdk.v2.version}</version>
+        </dependency>
 
         <dependency>
             <!-- Optimize this dependency for reducing the shared library size -->
